--- a/TratamnetoDeExcecoes/.project
+++ b/TratamnetoDeExcecoes/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>aula7Fac</name>
+	<name>TratamnetoDeExcecoes</name>
 	<comment></comment>
 	<projects>
 	</projects>
